[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enviroment/background1.png" type="Texture" id=1]
[ext_resource path="res://assets/enviroment/background2.png" type="Texture" id=2]
[ext_resource path="res://assets/enviroment/background3.png" type="Texture" id=3]
[ext_resource path="res://scenes/Title_Screen.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/normal.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/hover.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/Title_Screen.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/music/road - dark - slow.mp3" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.839216 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background image" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="bc1" type="TextureRect" parent="Background image"]
margin_right = 960.0
margin_bottom = 480.0
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Background image/bc1"]
margin_right = 960.0
margin_bottom = 480.0
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Background image"]
margin_left = -1.0
margin_top = 1.0
margin_right = 959.0
margin_bottom = 481.0
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.737255, 0.611765, 0.411765, 0.223529 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -127.0
margin_right = 217.0
margin_bottom = -82.0
custom_constants/separation = 55

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 433.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.890196, 0.12549, 0.12549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "DWARF RUNNER"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 100.0
margin_right = 433.0
margin_bottom = 225.0
custom_constants/separation = 35
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_right = 433.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 5 )
text = "Nowa Gra"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 433.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Wyjdz"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
